Fixed z-index to avoid wrong overlapping

--- a/admin/jqadm/themes/default/bootstrap.css
+++ b/admin/jqadm/themes/default/bootstrap.css
@@ -233,7 +233,7 @@ td.is-invalid .form-control {
 .btn,
 .dropdown-menu {
 	font-size: 100%;
-	z-index: 1041;
+	z-index: 1040;
 }
 
 .dropdown-item label {
